# rocminfo

./: CMakeLists.txt  CONTRIBUTING.md  README.md  rocm_agent_enumerator  rocminfo.cc
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: issue_report.yml
docs/: conf.py  index.rst  license.rst
docs/how-to/: use-rocm-agent-enumerator.rst  use-rocminfo.rst
docs/install/: build.rst
docs/sphinx/: _toc.yml.in  requirements.txt
